<resources>
    <string name="app_name">Eco Tiffins</string>
    <string name="api_end_point">http://ecotiffins.hol.es/apis/</string>
    <string name="google_map_android_key">AIzaSyDPby3acZ9vwuMCBoDuzepqTkFkXvdsEM8</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Drawer menus-->
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact Information</string>
    <string name="service">Service Areas</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="help_and_support">Help &amp; Support</string>

    <!--Option Menus-->
    <string name="action_offers">Offer</string>

    <!--Tiffin Pack Information-->
    <string name="single_pack_contains">Please review once before placing an order. Here we are offering a tiffin with free home delivery. Tiffin contains 5 Chapatees, Rayta, Curd, Pickle, Salad, Rice &amp; 2 Dishes.</string>
    <string name="combo_pack_contains">Please review once before placing an order. Here we are offering combo pack of tiffins with free home delivery. Each tiffin contains 5 Chapatees, Rayta, Curd, Pickle, Salad, Rice &amp; 2 Dishes.</string>
    <string name="monthly_pack_contains">Please review once before placing an order. Here you are requesting for daily tiffin service. Each tiffin contains 5 Chapatees, Rayta, Curd, Pickle, Salad, Rice &amp; 2 Dishes.</string>

    <!--System Messages-->
    <string name="error_email">Please provide a valid email address</string>
    <string name="error_password">Password should not be empty</string>
    <string name="error_password_min_lenth">Password should be minimum 6 letter.</string>
    <string name="request_failure">Failed to connect to the internet, Please try again</string>
    <string name="internet_error">Please connect to the internet, and give it an antoher shot</string>
    <string name="order_confirmation">You are going to place an order. Are you sure?</string>

    <!--Registration Error Message-->
    <string name="name_empty">Please enter your name.</string>
    <string name="address_empty">Address should be minimum 10 digit</string>
    <string name="contact_empty">Contact should be minimum 10 digit</string>
    <string name="contact_validate">Phone should be start from 7 |8 |9</string>
    <string name="password_empty">Password should be minimum 6 digit</string>
    <string name="password_not_confirm">Password should be similar</string>

    <string name="app_intro">
		<![CDATA[
		  <html>
 			<head></head>
 			<body style="text-align:justify; color:rgb(103,110,111); font-size:10;">
 			    <span style="font-size:12px">
  				Now no need to worry about your daily meals because we are just one click away to you.
  				Eco Tiffins has been introduced to provide you delicious food at your location and in affordable charges without compromising on their tests.
  				Eco Tiffins is well known for testy and healthy food. At the moment, We are providing our services at some limited areas of Jaipur city.
  				<br><br>
  				The art of cooking food is a passion at Eco Tiffins. We ourselves are great foodies/ food lovers, hence we believe that cooking is mastered through experience
  				along with great interest. Every individual has different tests and through our wide and extensive range of menus we strive to ensure that Eco Tiffins gives our guests the joy
  				of indulging in various gastronomic delights and enjoy value of money.
    			<br><br>
    			App users will get the benefit of App Only Offers. They can get Promo Code for discounts on the ordered tiffins.
    			To watch your Promo Code, just hit the <b>OFFER</b> button in the title bar. And if you get any promo code, order tiffin with Promo code and get
    			the discount on every order. So find out what we have to offer & enjoy!
    			<br><br>
    		    <span style="color:rgb(255,87,34);">Thank you for using Eco Tiffins&#8230;</span>
    			</span>
 			</body>
		  </html>
		]]>
	</string>
</resources>
