<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/groupOne" android:checkableBehavior="single">
        <item android:id="@+id/nav_home" android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>
        <item android:id="@+id/nav_history" android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/history" />
    </group>
    <item android:title="@string/help_and_support">
        <group android:id="@+id/groupTwo" android:checkableBehavior="single">
            <item android:id="@+id/nav_about" android:icon="@drawable/ic_error_black_24dp"
                android:title="@string/about_us" />
            <item android:id="@+id/nav_contact" android:icon="@drawable/ic_perm_contact_calendar_black_24dp"
                android:title="@string/contact" />
        </group>
    </item>
    <group android:id="@+id/groupThree">
        <item android:id="@+id/nav_share" android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share" />
        <item android:id="@+id/nav_logout" android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/logout" />
    </group>
</menu>